bug fixed with autoPlay()

--- a/index.html
+++ b/index.html
@@ -291,25 +291,25 @@
         </div>
 
 
-        <audio id="5" src="music/5.mp3"></audio>
-        <audio id="11" src="music/11.mp3"></audio>
-        <audio id="13" src="music/13.mp3"></audio>
-        <audio id="blocks" src="music/blocks.mp3"></audio>
-        <audio id="cat" src="music/cat.mp3"></audio>
-        <audio id="chirp" src="music/chirp.mp3"></audio>
-        <audio id="creator_music_box" src="music/creator_music_box.mp3"></audio>
-        <audio id="creator" src="music/creator.mp3"></audio>
-        <audio id="mall" src="music/mall.mp3"></audio>
-        <audio id="mellohi" src="music/mellohi.mp3"></audio>
-        <audio id="otherside" src="music/otherside.mp3"></audio>
-        <audio id="pigstep" src="music/pigstep.mp3"></audio>
-        <audio id="precipice" src="music/precipice.mp3"></audio>
-        <audio id="far" src="music/far.mp3"></audio>
-        <audio id="relic" src="music/relic.mp3"></audio>
-        <audio id="stal" src="music/stal.mp3"></audio>
-        <audio id="strad" src="music/strad.mp3"></audio>
-        <audio id="wait" src="music/wait.mp3"></audio>
-        <audio id="ward" src="music/ward.mp3"></audio>
+        <audio onended="nextTrackBar()" id="5" src="music/5.mp3"></audio>
+        <audio onended="nextTrackBar()" id="11" src="music/11.mp3"></audio>
+        <audio onended="nextTrackBar()" id="13" src="music/13.mp3"></audio>
+        <audio onended="nextTrackBar()" id="blocks" src="music/blocks.mp3"></audio>
+        <audio onended="nextTrackBar()" id="cat" src="music/cat.mp3"></audio>
+        <audio onended="nextTrackBar()" id="chirp" src="music/chirp.mp3"></audio>
+        <audio onended="nextTrackBar()" id="creator_music_box" src="music/creator_music_box.mp3"></audio>
+        <audio onended="nextTrackBar()" id="creator" src="music/creator.mp3"></audio>
+        <audio onended="nextTrackBar()" id="mall" src="music/mall.mp3"></audio>
+        <audio onended="nextTrackBar()" id="mellohi" src="music/mellohi.mp3"></audio>
+        <audio onended="nextTrackBar()" id="otherside" src="music/otherside.mp3"></audio>
+        <audio onended="nextTrackBar()" id="pigstep" src="music/pigstep.mp3"></audio>
+        <audio onended="nextTrackBar()" id="precipice" src="music/precipice.mp3"></audio>
+        <audio onended="nextTrackBar()" id="far" src="music/far.mp3"></audio>
+        <audio onended="nextTrackBar()" id="relic" src="music/relic.mp3"></audio>
+        <audio onended="nextTrackBar()" id="stal" src="music/stal.mp3"></audio>
+        <audio onended="nextTrackBar()" id="strad" src="music/strad.mp3"></audio>
+        <audio onended="nextTrackBar()" id="wait" src="music/wait.mp3"></audio>
+        <audio onended="nextTrackBar()" id="ward" src="music/ward.mp3"></audio>
 
 
 
@@ -318,7 +318,7 @@
 
     <script src="app.js"></script>
 
-
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
