--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div id="nowPlaying" class="nowPlaying shadow-lg ">
 
             <div class="progress">
-                <div id="progress-bar" class="progress-bar bg-red" role="progressbar" aria-valuenow="0"
-                    aria-valuemin="0" aria-valuemax="100"></div>
+                <div id="progress-bar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                    aria-valuemax="100"></div>
             </div>
 
             <div class="container-fluid p-2 px-3">
@@ -169,10 +169,10 @@
 
         <div class="container">
 
-            <div class="row justify-content-center d-none d-sm-flex" id="verticalCards">
+            <div class="row justify-content-center d-none d-sm-flex" id="verticaleCards">
 
                 <!-- creator -->
-                <div class="col-5 musicCard rounded-1 pb-2 m-2">
+                <div class="col-5 col-md-3 col-lg-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -197,7 +197,7 @@
 
                 <!-- creator music box -->
 
-                <div class="col-5 musicCard rounded-1 pb-2 m-2">
+                <div class="col-5 col-md-3 col-lg-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -221,6 +221,79 @@
 
                 </div>
 
+
+
+
+                <!-- ROUGHROJNONEOINFIONIONIOEGNIOSNINGV -->
+
+
+                <!-- creator -->
+                <div class="col-5 col-md-3 col-lg-2 musicCard rounded-1 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg my-auto mx-auto " src="images/disc_creator.png " alt="">
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name">Creator</text>
+                            <text class="musicCard-by">Lena Raine</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center  d-flex my-2">
+                            <p name="CreatorPlay" style="width: fit-content"
+                                class="fs-4 px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
+                                onclick="play('Creator')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div><!-- creator -->
+                <div class="col-5 col-md-3 col-lg-2 musicCard rounded-1 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg my-auto mx-auto " src="images/disc_creator.png " alt="">
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name">Creator</text>
+                            <text class="musicCard-by">Lena Raine</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center  d-flex my-2">
+                            <p name="CreatorPlay" style="width: fit-content"
+                                class="fs-4 px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
+                                onclick="play('Creator')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-5 col-md-3 col-lg-2 musicCard rounded-1 pb-2 m-2">
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <img class="musicCardImg my-auto mx-auto " src="images/disc_creator.png " alt="">
+
+                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
+
+                            <text class="musicCard-name">Creator</text>
+                            <text class="musicCard-by">Lena Raine</text>
+
+                        </div>
+
+                        <div class="text-center justify-content-center  d-flex my-2">
+                            <p name="CreatorPlay" style="width: fit-content"
+                                class="fs-4 px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
+                                onclick="play('Creator')">Play</p>
+
+                        </div>
+                    </div>
+
+                </div>
 
 
 
@@ -318,7 +391,7 @@
 
     <script src="app.js"></script>
 
-  
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
