changed creator music box icon

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
         <div class="container">
 
-            <div class="row justify-content-center d-none d-sm-flex" id="verticaleCards">
+            <div class="row justify-content-center d-none d-sm-flex" id="verticalCards">
 
                 <!-- creator -->
                 <div class="col-5 col-md-3 col-lg-2 musicCard rounded-1 pb-2 m-2">
@@ -206,7 +206,7 @@
                         <div class="d-flex flex-column justify-content-center align-items-center mb-2">
 
                             <text class="musicCard-name">Creator</text>
-                            <text class="musicCard-by">(Music Box)</text>
+                             
                             <text class="musicCard-by">Lena Raine</text>
 
                         </div>
@@ -220,81 +220,6 @@
                     </div>
 
                 </div>
-
-
-
-
-                <!-- ROUGHROJNONEOINFIONIONIOEGNIOSNINGV -->
-
-
-                <!-- creator -->
-                <div class="col-5 col-md-3 col-lg-2 musicCard rounded-1 pb-2 m-2">
-
-                    <div class="d-flex flex-column justify-content-center">
-
-                        <img class="musicCardImg my-auto mx-auto " src="images/disc_creator.png " alt="">
-
-                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
-
-                            <text class="musicCard-name">Creator</text>
-                            <text class="musicCard-by">Lena Raine</text>
-
-                        </div>
-
-                        <div class="text-center justify-content-center  d-flex my-2">
-                            <p name="CreatorPlay" style="width: fit-content"
-                                class="fs-4 px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
-                                onclick="play('Creator')">Play</p>
-
-                        </div>
-                    </div>
-
-                </div><!-- creator -->
-                <div class="col-5 col-md-3 col-lg-2 musicCard rounded-1 pb-2 m-2">
-
-                    <div class="d-flex flex-column justify-content-center">
-
-                        <img class="musicCardImg my-auto mx-auto " src="images/disc_creator.png " alt="">
-
-                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
-
-                            <text class="musicCard-name">Creator</text>
-                            <text class="musicCard-by">Lena Raine</text>
-
-                        </div>
-
-                        <div class="text-center justify-content-center  d-flex my-2">
-                            <p name="CreatorPlay" style="width: fit-content"
-                                class="fs-4 px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
-                                onclick="play('Creator')">Play</p>
-
-                        </div>
-                    </div>
-
-                </div>
-                <div class="col-5 col-md-3 col-lg-2 musicCard rounded-1 pb-2 m-2">
-
-                    <div class="d-flex flex-column justify-content-center">
-
-                        <img class="musicCardImg my-auto mx-auto " src="images/disc_creator.png " alt="">
-
-                        <div class="d-flex flex-column justify-content-center align-items-center mb-2">
-
-                            <text class="musicCard-name">Creator</text>
-                            <text class="musicCard-by">Lena Raine</text>
-
-                        </div>
-
-                        <div class="text-center justify-content-center  d-flex my-2">
-                            <p name="CreatorPlay" style="width: fit-content"
-                                class="fs-4 px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
-                                onclick="play('Creator')">Play</p>
-
-                        </div>
-                    </div>
-
-                </div>
-
 
 
 
@@ -338,8 +263,8 @@
 
                         <div class="d-flex flex-column  mx-1">
 
-                            <text class="musicCard-name mt-auto">Creator</text>
-                            <text class="musicCard-by">(Music Box)</text>
+                            <text class="musicCard-name mt-auto">Creator </text>
+                             
                             <text class="musicCard-by mb-auto">Lena Raine</text>
 
                         </div>
