--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container ">
             <div class="row py-4 ">
                 <div class="col-12 d-flex justify-content-center text-center">
-                    <text class="textMain ">Minecraft Jukebox</text>
+                    <text id="textMain" class="textMain ">Minecraft Jukebox</text>
                 </div>
             </div>
         </div>
@@ -172,7 +172,7 @@
             <div class="row justify-content-center d-none d-sm-flex" id="verticalCards">
 
                 <!-- creator -->
-                <div class="col-5 col-md-3 col-lg-2 musicCard rounded-1 pb-2 m-2">
+                <div class="col-5 col-md-4 col-lg-3 col-xl-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -197,7 +197,7 @@
 
                 <!-- creator music box -->
 
-                <div class="col-5 col-md-3 col-lg-2 musicCard rounded-1 pb-2 m-2">
+                <div class="col-5 col-md-4 col-lg-3 col-xl-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -206,7 +206,7 @@
                         <div class="d-flex flex-column justify-content-center align-items-center mb-2">
 
                             <text class="musicCard-name">Creator</text>
-                             
+
                             <text class="musicCard-by">Lena Raine</text>
 
                         </div>
@@ -264,7 +264,7 @@
                         <div class="d-flex flex-column  mx-1">
 
                             <text class="musicCard-name mt-auto">Creator </text>
-                             
+
                             <text class="musicCard-by mb-auto">Lena Raine</text>
 
                         </div>
