--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
         <!-- now playing bar -->
         <div id="nowPlaying" class="nowPlaying shadow-lg ">
 
-
-            <!-- big screen -->
+            <!-- vertica; -->
             <div class="d-none d-sm-block" id="verticalCardBar">
                 <div class="progress">
                     <div id="progress-bar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
@@ -167,8 +166,6 @@
 
                 </div>
             </div>
-
-
 
 
             <!-- hroizontal -->
@@ -329,13 +326,12 @@
 
                 </div>
             </div>
+
         </div>
 
 
         <!-- music cards -->
-
         <div class="container">
-
             <div class="row justify-content-center d-none d-sm-flex" id="verticalCards">
 
                 <!-- creator -->
@@ -363,7 +359,6 @@
                 </div>
 
                 <!-- creator music box -->
-
                 <div class="col-5 col-md-4 col-lg-3 col-xxl-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
@@ -387,11 +382,7 @@
                     </div>
 
                 </div>
-
-
-
             </div>
-
 
 
 
