--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- vertica; -->
             <div class="d-none d-sm-block" id="verticalCardBar">
                 <div class="progress">
-                    <div id="progress-bar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                    <div name="progress-bar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
                         aria-valuemax="100"></div>
                 </div>
 
@@ -65,7 +65,7 @@
 
 
 
-                            <div class="mx-2 align-items-center d-flex" onclick="backward10()" id="backward10">
+                            <div class="mx-2 align-items-center d-flex" onclick="backward10()" >
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="100%"
                                     fill="currentColor" class="bi bi-skip-forward-fill" viewBox="0 0 512 512">
                                     <path
@@ -79,7 +79,7 @@
 
 
                             <div class="mx-1 align-items-center d-flex" onclick="previousTrackBar()"
-                                id="previousTrackBar">
+                                >
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.8em" height="100%"
                                     fill="currentColor" class="bi bi-skip-backward-fill" viewBox="0 0 16 16">
                                     <path
@@ -90,7 +90,7 @@
                             </div>
 
 
-                            <div class="mx-1 align-items-center d-flex" onclick="playBar()" id="play">
+                            <div class="mx-1 align-items-center d-flex" onclick="playBar()" name="play">
 
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="3.2em" height="100%"
                                     fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
@@ -101,7 +101,7 @@
                             </div>
 
 
-                            <div class="mx-1 align-items-center d-flex  d-none" onclick="pauseBar()" id="pause">
+                            <div class="mx-1 align-items-center d-flex  d-none" onclick="pauseBar()" name="pause">
                                 <svg class="align-middle " xmlns="http://www.w3.org/2000/svg" width="3.2em"
                                     height="100%" fill="currentColor" class="bi bi-pause-fill" viewBox="0 0 16 16">
                                     <path
@@ -111,7 +111,7 @@
                             </div>
 
 
-                            <div class="mx-1 align-items-center d-flex" onclick="nextTrackBar()" id="nextTrackBar">
+                            <div class="mx-1 align-items-center d-flex" onclick="nextTrackBar()" >
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.8em" height="100%"
                                     fill="currentColor" class="bi bi-skip-forward-fill" viewBox="0 0 16 16">
                                     <path
@@ -119,7 +119,7 @@
                                 </svg>
                             </div>
 
-                            <div class="mx-2 align-items-center d-flex" onclick="forward10()" id="forward10">
+                            <div class="mx-2 align-items-center d-flex" onclick="forward10()" >
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="100%"
                                     fill="currentColor" class="bi bi-skip-forward-fill" viewBox="0 0 512 512">
                                     <path
@@ -137,8 +137,18 @@
                         <div class="col-4 d-flex justify-content-end align-middle">
 
 
+                            <div class="mx-2" onclick="queueSong()" >
+                                <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.8em" height="100%"
+                                    fill="currentColor" viewBox="0 0 16 16">
+                                    <path d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2" />
+                                    <path fill-rule="evenodd" d="M12 3v10h-1V3z" />
+                                    <path d="M11 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 16 2.22V4l-5 1z" />
+                                    <path fill-rule="evenodd"
+                                        d="M0 11.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 7H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 3H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5" />
+                                </svg>
+                            </div>
 
-                            <div class="mx-2" onclick="loopSong()" id="loopingOff">
+                            <div class="mx-2" onclick="loopSong()" name="loopingOff">
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.8em" height="100%"
                                     fill="currentColor" viewBox="0 0 16 16">
                                     <path
@@ -148,7 +158,7 @@
 
                             </div>
 
-                            <div class="mx-2 d-none" onclick="loopSong()" id="loopingOn">
+                            <div class="mx-2 d-none" onclick="loopSong()" name="loopingOn">
                                 <svg class="align-middle looping" xmlns="http://www.w3.org/2000/svg" width="1.8em"
                                     height="100%" fill="currentColor" viewBox="0 0 16 16">
                                     <path
@@ -171,7 +181,7 @@
             <!-- hroizontal -->
             <div class="d-sm-none" id="horizontalCardBar">
                 <div class="progress">
-                    <div id="progress-bar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                    <div name="progress-bar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
                         aria-valuemax="100"></div>
                 </div>
 
@@ -182,7 +192,7 @@
 
 
                         <!-- start part -->
-                        <div class="col-4 d-flex justify-content-start align-middle">
+                        <div class="col-2 d-flex justify-content-start align-middle">
 
 
 
@@ -195,8 +205,6 @@
                                     <path fill-rule="evenodd"
                                         d="M0 11.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 7H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5m0-4A.5.5 0 0 1 .5 3H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5" />
                                 </svg>
-
-
                             </div>
 
 
@@ -205,11 +213,11 @@
 
 
                         <!-- center parts -->
-                        <div class="col-4 d-flex justify-content-center align-middle">
+                        <div class="col-8 d-flex justify-content-center align-middle">
 
 
 
-                            <div class="mx-2 align-items-center d-flex" onclick="backward10()" id="backward10">
+                            <div class="mx-2 align-items-center d-flex" onclick="backward10()" >
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.3em" height="100%"
                                     fill="currentColor" class="bi bi-skip-forward-fill" viewBox="0 0 512 512">
                                     <path
@@ -223,7 +231,7 @@
 
 
                             <div class="mx-1 align-items-center d-flex" onclick="previousTrackBar()"
-                                id="previousTrackBar">
+                                >
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="100%"
                                     fill="currentColor" class="bi bi-skip-backward-fill" viewBox="0 0 16 16">
                                     <path
@@ -234,7 +242,7 @@
                             </div>
 
 
-                            <div class="mx-1 align-items-center d-flex" onclick="playBar()" id="play">
+                            <div class="mx-1 align-items-center d-flex" onclick="playBar()" name="play">
 
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="2.6em" height="100%"
                                     fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
@@ -245,7 +253,7 @@
                             </div>
 
 
-                            <div class="mx-1 align-items-center d-flex  d-none" onclick="pauseBar()" id="pause">
+                            <div class="mx-1 align-items-center d-flex  d-none" onclick="pauseBar()" name="pause">
                                 <svg class="align-middle " xmlns="http://www.w3.org/2000/svg" width="2.6em"
                                     height="100%" fill="currentColor" class="bi bi-pause-fill" viewBox="0 0 16 16">
                                     <path
@@ -255,7 +263,7 @@
                             </div>
 
 
-                            <div class="mx-1 align-items-center d-flex" onclick="nextTrackBar()" id="nextTrackBar">
+                            <div class="mx-1 align-items-center d-flex" onclick="nextTrackBar()" >
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="100%"
                                     fill="currentColor" class="bi bi-skip-forward-fill" viewBox="0 0 16 16">
                                     <path
@@ -263,7 +271,7 @@
                                 </svg>
                             </div>
 
-                            <div class="mx-2 align-items-center d-flex" onclick="forward10()" id="forward10">
+                            <div class="mx-2 align-items-center d-flex" onclick="forward10()" >
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.3em" height="100%"
                                     fill="currentColor" class="bi bi-skip-forward-fill" viewBox="0 0 512 512">
                                     <path
@@ -278,11 +286,11 @@
 
 
                         <!-- end part -->
-                        <div class="col-4 d-flex justify-content-end align-middle">
+                        <div class="col-2 d-flex justify-content-end align-middle">
 
 
 
-                            <div class="mx-2" onclick="loopSong()" id="loopingOff">
+                            <div class="mx-2" onclick="loopSong()" name="loopingOff">
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.6em" height="100%"
                                     fill="currentColor" viewBox="0 0 16 16">
                                     <path
@@ -292,7 +300,7 @@
 
                             </div>
 
-                            <div class="mx-2 d-none" onclick="loopSong()" id="loopingOn">
+                            <div class="mx-2 d-none" onclick="loopSong()" name="loopingOn">
                                 <svg class="align-middle looping" xmlns="http://www.w3.org/2000/svg" width="1.6em"
                                     height="100%" fill="currentColor" viewBox="0 0 16 16">
                                     <path
