auto scroll to playing song when in mobile view

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <!-- now playing bar -->
-        <div id="nowPlaying" class="nowPlaying shadow-lg ">
+        <div id="nowPlaying" class="nowPlaying shadow-lg d-none ">
 
             <!-- vertica; -->
             <div class="d-none d-sm-block" id="verticalCardBar">
