created queue display card

--- a/index.html
+++ b/index.html
@@ -336,6 +336,44 @@
         </div>
 
 
+        <!-- queue list -->
+        <div class="container queueList mt-2 text-center ">
+
+            <text class="queueTitle my-3">Queue:</text>
+
+            <div class="row d-flex flex-column justify-content-center">
+
+
+                <div class="col-11 col-md-8 col-lg-6 col-xl-4 musicCard rounded-2 m-2 mx-auto p-2 ">
+
+                    <div class="d-flex ">
+
+                        <div class="text-center justify-self-start justify-content-center   d-flex">
+                            <p name="CreatorPlay" style="width: fit-content"
+                                class="fs-4 px-3 mx-0 my-auto rounded-2 queueNumber text-center col-1">1</p>
+
+                        </div>
+
+                        <div class="mx-3 d-flex justify-content-start align-items-center" style="width: 100%;">
+                            <text class="musicCard-name mx-1">Creator</text>
+                            <text class="musicCard-by mx-1">&#9679;</text>
+                            <text class="musicCard-by mx-1">Lena Raine</text>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+            </div>
+
+
+
+            <div style="height: 300px;"></div>
+
+        </div>
+
+
 
         <!-- music cards -->
         <div class="container mb-2">
@@ -451,14 +489,7 @@
 
         <hr class="queueSeprator mx-auto">
 
-        <!-- queue list -->
-        <div class="container queueList mt-2">
 
-            
-
-            <div style="height: 300px;"></div>
-
-        </div>
 
 
 
