--- a/index.html
+++ b/index.html
@@ -335,6 +335,16 @@
 
         </div>
 
+        <!-- Add to queue indicator -->
+        <div id="addSongsToQueueBar" class="addSongsToQueueBar d-flex d-none p-2 justify-content-center ">
+
+
+
+            <div class="mx-auto my-auto">Add Songs To Queue</div>
+
+
+        </div>
+
 
         <!-- queue list -->
         <div class="container queueList mt-2 text-center ">
@@ -380,7 +390,7 @@
             <div class="row justify-content-center d-none d-sm-flex" id="verticalCards">
 
                 <!-- creator -->
-                <div class="col-5 col-md-4 col-lg-3 col-xxl-2 musicCard rounded-1 pb-2 m-2">
+                <div class="col-5 col-md-4 col-lg-3 col-xl-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
@@ -404,7 +414,7 @@
                 </div>
 
                 <!-- creator music box -->
-                <div class="col-5 col-md-4 col-lg-3 col-xxl-2 musicCard rounded-1 pb-2 m-2">
+                <div class="col-5 col-md-4 col-lg-3 col-xl-2 musicCard rounded-1 pb-2 m-2">
 
                     <div class="d-flex flex-column justify-content-center">
 
