--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <div class="col-4 d-flex justify-content-end align-middle">
 
 
-                            <div class="mx-2" onclick="queueSong()">
+                            <div class="mx-2" onclick="queueSongButton()">
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.8em" height="100%"
                                     fill="currentColor" viewBox="0 0 16 16">
                                     <path d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2" />
@@ -195,7 +195,7 @@
 
 
 
-                            <div class="mx-2" onclick="queueSong()">
+                            <div class="mx-2" onclick="queueSongButton()">
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.6em" height="100%"
                                     fill="currentColor" viewBox="0 0 16 16">
                                     <path d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2" />
@@ -347,39 +347,11 @@
 
 
         <!-- queue list -->
-        <div class="container queueList mt-2 text-center ">
+        <div id="queueList" class="container queueList mt-2 text-center ">
 
             <text class="queueTitle my-3">Queue:</text>
 
-            <div class="row d-flex flex-column justify-content-center">
 
-
-                <div class="col-11 col-md-8 col-lg-6 col-xl-4 musicCard rounded-2 m-2 mx-auto p-2 ">
-
-                    <div class="d-flex ">
-
-                        <div class="text-center justify-self-start justify-content-center   d-flex">
-                            <p name="CreatorPlay" style="width: fit-content"
-                                class="fs-4 px-3 mx-0 my-auto rounded-2 queueNumber text-center col-1">1</p>
-
-                        </div>
-
-                        <div class="mx-3 d-flex justify-content-start align-items-center" style="width: 100%;">
-                            <text class="musicCard-name mx-1">Creator</text>
-                            <text class="musicCard-by mx-1">&#9679;</text>
-                            <text class="musicCard-by mx-1">Lena Raine</text>
-                        </div>
-
-                    </div>
-
-                </div>
-
-
-            </div>
-
-
-
-            <div style="height: 300px;"></div>
 
         </div>
 
