--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <!-- now playing bar -->
-        <div id="nowPlaying" class="nowPlaying d-none shadow-lg ">
+        <div id="nowPlaying" class="nowPlaying  shadow-lg ">
 
             <!-- vertica; -->
             <div class="d-none d-sm-block" id="verticalCardBar">
@@ -136,7 +136,7 @@
                         <div class="col-4 d-flex justify-content-end align-middle">
 
 
-                            <div class="mx-2" onclick="queueSongButton()">
+                            <div class="mx-2" onclick="queueSongShow()">
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.8em" height="100%"
                                     fill="currentColor" viewBox="0 0 16 16">
                                     <path d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2" />
@@ -195,7 +195,7 @@
 
 
 
-                            <div class="mx-2" onclick="queueSongButton()">
+                            <div class="mx-2" onclick="queueSongShow()">
                                 <svg class="align-middle" xmlns="http://www.w3.org/2000/svg" width="1.6em" height="100%"
                                     fill="currentColor" viewBox="0 0 16 16">
                                     <path d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2" />
@@ -345,17 +345,16 @@
 
         </div>
 
+        <!-- queue add list -->
 
-        <!-- queue aff list -->
-
-        <div class="queueAddPopUp rounded-4">
+        <div id="queueAddPopUp" class="queueAddPopUp d-none ">
 
 
-            <div id="queueSongCreator" class="row d-flex flex-column justify-content-center p-3">
+            <div class="row d-flex  justify-content-center p-3 m-0 pb-sm-5">
 
                 <!-- back button -->
-                <div>
-                    <div class="justify-content-start">
+                <div style="width: 100%;" class="d-flex">
+                    <div class="d-inline justify-content-start" onclick="queueSongShow()">
 
                         <svg xmlns="http://www.w3.org/2000/svg" width="1.4em" fill="#008d3fed"
                             class="bi bi-arrow-left-square-fill " viewBox="0 0 16 16">
@@ -364,37 +363,14 @@
                         </svg>
 
                     </div>
-                </div>
 
-
-                <div class="mt-3 row d-flex justify-content-center ">
-
-
-                    <div class="col-11 col-md-5 col-lg-4 col-xxl-3 musicCard rounded-2 m-2 p-2 ">
-
-                        <div class="d-flex ">
-
-                            <div class=" d-flex justify-self-start justify-content-start align-items-center"
-                                style="width: 100%;">
-                                <text class="musicCard-name mx-1">Creator</text>
-                                <text class="musicCard-by mx-1">&#9679;</text>
-                                <text class="musicCard-by mx-1">Lena Raine</text>
-                            </div>
-
-
-                            <div class="text-center justify-self-end justify-content-center"
-                                onclick="queueSongButton()">
-                                <p style="width: fit-content"
-                                    class="fs-4 px-3 mx-0 my-auto rounded-2 queueNumber text-center">
-                                    +</p>
-
-                            </div>
-                        </div>
-
+                    <div class="d-inline ms-auto">
+                        <text id="queueAddedText" class="queueAddedText"></text>
                     </div>
+                </div>
 
 
-
+                <div id="queueSongCreator" class="mt-3 row d-flex justify-content-center  ">
 
                 </div>
 
@@ -404,21 +380,6 @@
 
 
         </div>
-
-        <!-- queue list -->
-        <div class="container queueList mt-2 text-center ">
-
-            <div>
-                <text class="queueTitle my-3">Queue:</text>
-            </div>
-
-            <div id="queueList" class="d-flex flex-wrap justify-content-center">
-
-            </div>
-
-
-        </div>
-
 
 
         <!-- music cards -->
@@ -535,7 +496,23 @@
 
         <hr class="queueSeprator mx-auto">
 
+        <!-- queue list -->
+        <div class="container queueList mt-2 text-center ">
 
+            <div>
+                <text class="queueTitle my-3">Queue:</text>
+            </div>
+
+            <div id="queueList" class="d-flex flex-wrap justify-content-center">
+
+            </div>
+
+
+        </div>
+
+        <div style="height: 7em;">
+
+        </div>
 
         <audio onended="nextTrackBar()" id="5" src="music/5.mp3"></audio>
         <audio onended="nextTrackBar()" id="11" src="music/11.mp3"></audio>
