--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <!-- allows for responsive view -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <link rel="icon" href="favicon.png" />
         <!-- Bootstrap Icons -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
