--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <!-- now playing bar -->
-        <div id="nowPlaying" class="nowPlaying  shadow-lg ">
+        <div id="nowPlaying" class="nowPlaying  shadow-lg d-none">
 
             <!-- vertica; -->
             <div class="d-none d-sm-block" id="verticalCardBar">
@@ -345,7 +345,7 @@
 
         <!-- queue add list -->
 
-        <div id="queueAddPopUp" class="queueAddPopUp  ">
+        <div id="queueAddPopUp" class="queueAddPopUp  d-none">
 
 
             <div class="row d-flex justify-content-center p-3 m-0 pb-sm-5">
