--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 
                         <div class="text-center justify-content-center  d-flex my-2">
                             <p name="CreatorPlay" style="width: fit-content"
-                                class="fs-4 px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
+                                class=" px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
                                 onclick="play('Creator')">Play</p>
 
                         </div>
@@ -431,7 +431,7 @@
 
                         <div class="text-center justify-content-center  d-flex my-2">
                             <p name="Creator (MB)Play" style="width: fit-content"
-                                class="fs-4 px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
+                                class=" px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
                                 onclick="play('Creator (MB)')">Play</p>
 
                         </div>
@@ -460,7 +460,7 @@
 
                         <div class="text-center justify-content-center justify-self-end  d-flex ms-auto my-2 mx-1">
                             <p name="CreatorPlay" style="width: fit-content"
-                                class="fs-4 px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
+                                class=" px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
                                 onclick="play('Creator')">Play</p>
 
                         </div>
@@ -485,7 +485,7 @@
 
                         <div class="text-center justify-content-center justify-self-end  d-flex ms-auto my-2 mx-1">
                             <p name="Creator (MB)Play" style="width: fit-content"
-                                class="fs-4 px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
+                                class=" px-3 mx-0 my-auto rounded-1 musciCardPlay text-center"
                                 onclick="play('Creator (MB)')">Play</p>
 
                         </div>
